--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="ko">
 <head>
@@ -65,6 +64,7 @@
       box-shadow:0 3px 8px rgba(0,0,0,0.12);
     }
     .btn-kakao {background:#FEE500;color:#111;}
+    .btn-instagram {background:#E4405F;color:#fff;}
     .btn-share {background:#6b7280;color:#fff;}
   </style>
 </head>
@@ -90,6 +90,7 @@
 
   <div class="cta-dock">
     <a href="https://open.kakao.com/o/go3sJ0Kh" class="btn-kakao" target="_blank">💬 단톡방 참여하기</a>
+    <a href="https://www.instagram.com/projectpaw.kr/" class="btn-instagram" target="_blank">📸 인스타그램</a>
     <a href="#" class="btn-share">🔗 Paw 링크 복사</a>
   </div>
 
