--- a/project.html
+++ b/project.html
@@ -14,16 +14,14 @@
       font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
     .wrap{max-width:1100px;margin:0 auto;padding:20px 16px}
 
-    /* ===== 기존 스타일 ===== */
+    /* ===== 기본 스타일 ===== */
     .hero-card{background:#fff;border-radius:20px;overflow:hidden;
                box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
     .overlay{position:absolute;bottom:0;left:0;right:0;
       background:linear-gradient(to top,rgba(0,0,0,.6),rgba(0,0,0,0));
       color:#fff;padding:20px}
     .overlay .badge{background:var(--accent);padding:6px 12px;border-radius:8px;font-weight:700}
-    .overlay h1{margin:8px 0;font-size:1.6rem;font-weight:900}
-    .overlay .summary{font-size:1rem;opacity:.9}
-    .key-message{margin-top:6px;color:#FFD166;font-weight:700}
+    .overlay .key-message{margin-top:6px;color:#FFD166;font-weight:700}
     .hero-body{padding:24px}
     .hearts{font-size:1.1rem;font-weight:700;color:var(--accent);margin-bottom:12px}
     .progress{background:#e5e7eb;height:16px;border-radius:12px;overflow:hidden;margin:14px 0}
@@ -66,24 +64,6 @@
     }
     @media(max-width:600px){.paw-head .big-title{font-size:1.7rem}}
     .paw-head .subline{margin-top:8px;color:var(--sub)}
-    .paw-head .admin{margin-top:10px;background:#fff8f2;border:1px solid #f4d0b5;border-radius:10px;
-      padding:12px;font-weight:800;color:#d35400}
-    .paw-grid{display:grid;gap:20px}
-    @media(min-width:992px){.paw-grid{grid-template-columns:1.05fr .95fr}}
-    .paw-panel{background:#fff;border:1px solid var(--line);border-radius:14px;padding:18px}
-    .paw-panel h2{margin:0 0 10px;font-size:1.1rem;font-weight:900;color:var(--accent)}
-    .paw-media{padding:0}
-    .paw-media img{display:block;width:100%;height:56vh;min-height:280px;max-height:680px;object-fit:cover}
-    .paw-progress{display:flex;gap:16px;flex-wrap:wrap}
-    .paw-kv{flex:1 1 160px;border:1px solid var(--line);border-radius:10px;padding:12px}
-    .paw-kv .k{font-size:.9rem;color:var(--sub)}
-    .paw-kv .v{margin-top:4px;font-weight:900}
-    .paw-kv .v.big{font-size:1.3rem}
-    .paw-why p,.paw-beta p{line-height:1.7;color:var(--sub);margin:0}
-    .paw-title{margin:0 0 6px;font-size:1.6rem;font-weight:900}
-    .paw-meta{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-bottom:10px}
-    .paw-chip{display:inline-block;border:1px solid var(--line);border-radius:999px;padding:6px 10px;font-weight:800;font-size:.85rem;background:#fff}
-    .paw-summary{margin:6px 0 12px;color:var(--ink)}
   </style>
 </head>
 <body>
@@ -135,6 +115,10 @@
         const rate=goal?Math.floor(current/goal*100):0;
 
         $detail.innerHTML=`
+          <section class="paw-head">
+            <h1 class="big-title">PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h1>
+          </section>
+
           <section class="hero-card">
             <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -143,8 +127,6 @@
                     <img src="${url}" class="d-block w-100" style="height:340px;object-fit:cover" alt="img${i}">
                     <div class="overlay">
                       <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
-                      <h1>PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h1>
-                      <p class="summary">${p.summary??''}</p>
                       ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
                     </div>
                   </div>`).join('')}
@@ -159,6 +141,7 @@
             <div class="thumb-strip">
               ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
             </div>
+
             <div class="hero-body">
               <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
               <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
@@ -167,21 +150,23 @@
                 <span>현재 <strong>${fmt(current)}</strong>원</span>
                 <span>구조자 <strong>${p.rescuerName??'익명'}</strong></span>
               </div>
-              ${p.adminMessage?`
-                <div class="admin-origin" style="margin-top:18px;padding:14px;border-radius:12px;background:#fff8f2;
-                            border:1px solid #f4d0b5;font-weight:800;color:#d35400;font-size:1.05rem;text-align:center">
-                  📌 관리자 한마디: ${p.adminMessage}
-                </div>`:''}
+
+              ${p.summary?`<div class="section-card" style="margin-top:16px"><p>${p.summary}</p></div>`:''}
+              ${p.adminMessage?`<div class="section-card" style="margin-top:12px;background:#f9f9ff;border:1px solid #d0d7ff">
+                📌 관리자 한마디: ${p.adminMessage}</div>`:''}
             </div>
           </section>
+
           <section class="section-card">
             <h2>스토리</h2>
             <p>${formatDescription(p.description)}</p>
           </section>
+
           <div class="action-buttons">
-            ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원하러 가기</a>`:''}
-            <button class="btn-share" id="shareCopy">🔗 링크 복사</button>
+            ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원 참여(단톡방)</a>`:''}
+            <button class="btn-share" id="shareCopy">🔗 공유하기</button>
           </div>
+
           <section class="section-card">
             <h2>Beta 안내</h2>
             <p style="line-height:1.6">
@@ -201,43 +186,6 @@
     }
     render();
     document.querySelector(".btn-share-dock")?.addEventListener("click",()=>{navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다."));});
-  </script>
-
-  <!-- ===== 무침습 레이아웃 + 버튼 라벨 패치 ===== -->
-  <script>
-    (function(){
-      const fmtNum = s => Number(String(s||'').replace(/[^\d]/g,'')||0);
-      function once(){
-        const wrap=document.querySelector('.wrap');
-        const root=document.querySelector('#project-detail');
-        const hero=root?.querySelector('.hero-card');
-        const story=Array.from(root?.querySelectorAll('.section-card')||[]).find(sec=>sec.querySelector('h2')?.textContent.trim()==='스토리');
-        if(!wrap||!root||!hero||!story) return;
-
-        // Headline
-        const titleText=hero.querySelector('.overlay h1')?.textContent?.trim()||'Project.PAW';
-        const summaryHTML=hero.querySelector('.overlay .summary')?.innerHTML||'';
-        const adminBox=hero.querySelector('.admin-origin');
-        const adminText=adminBox?adminBox.textContent.replace(/^📌\s*관리자 한마디:\s*/,'').trim():'';
-        const head=document.createElement('section');
-        head.className='paw-head';
-        head.innerHTML=`
-          <h1 class="big-title">${titleText.replace(/^PAW\s*#\S+\s*/,'').trim()}</h1>
-          ${summaryHTML?`<div class="subline">${summaryHTML}</div>`:''}
-          ${adminText?`<div class="admin">관리자 한마디: ${adminText}</div>`:''}`;
-        wrap.insertBefore(head,root);
-        adminBox?.remove();
-
-        // 버튼 라벨 교체
-        const kakaoBtn=document.querySelector('.action-buttons .btn-kakao');
-        const shareBtn=document.querySelector('.action-buttons .btn-share');
-        if(kakaoBtn) kakaoBtn.textContent='후원하러가기(단톡방)';
-        if(shareBtn) shareBtn.textContent='공유하기 (링크복사)';
-      }
-      let waited=0;
-      const iv=setInterval(()=>{if(document.querySelector('#project-detail .hero-card')){clearInterval(iv);once();}
-        if((waited+=100)>2000)clearInterval(iv);},100);
-    })();
   </script>
 </body>
 </html>
