--- a/project.html
+++ b/project.html
@@ -14,7 +14,13 @@
       font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
     .wrap{max-width:1100px;margin:0 auto;padding:20px 16px}
 
-    /* ===== 기본 스타일 ===== */
+    /* 공통 카드 */
+    .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
+                  box-shadow:0 4px 10px rgba(0,0,0,0.05)}
+    .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
+    .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
+
+    /* Hero */
     .hero-card{background:#fff;border-radius:20px;overflow:hidden;
                box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
     .overlay{position:absolute;bottom:0;left:0;right:0;
@@ -22,17 +28,23 @@
       color:#fff;padding:20px}
     .overlay .badge{background:var(--accent);padding:6px 12px;border-radius:8px;font-weight:700}
     .overlay .key-message{margin-top:6px;color:#FFD166;font-weight:700}
-    .hero-body{padding:24px}
-    .hearts{font-size:1.1rem;font-weight:700;color:var(--accent);margin-bottom:12px}
-    .progress{background:#e5e7eb;height:16px;border-radius:12px;overflow:hidden;margin:14px 0}
-    .progress .bar{height:100%;background:var(--accent);color:#fff;
-                   text-align:center;font-size:.8rem;font-weight:600}
-    .stats{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;font-size:.95rem;color:var(--sub);margin-top:8px}
-    .stats span strong{font-size:1.05rem;font-weight:800;color:var(--ink);margin-left:4px}
     .thumb-strip{display:flex;gap:8px;overflow-x:auto;padding:10px;background:#fafafa}
     .thumb-strip img{height:70px;width:70px;object-fit:cover;border-radius:8px;cursor:pointer;
       border:2px solid transparent;flex-shrink:0}
     .thumb-strip img.active{border-color:var(--accent)}
+
+    /* 우측 패널 */
+    .paw-grid{display:grid;gap:20px}
+    @media(min-width:992px){.paw-grid{grid-template-columns:1.1fr .9fr}}
+    .paw-panel{background:#fff;border:1px solid var(--line);border-radius:14px;padding:20px}
+    .paw-panel .hearts{font-size:1.1rem;font-weight:700;color:var(--accent);margin-bottom:12px}
+    .paw-panel .progress{background:#e5e7eb;height:16px;border-radius:12px;overflow:hidden;margin:14px 0}
+    .paw-panel .progress .bar{height:100%;background:var(--accent);color:#fff;
+      text-align:center;font-size:.8rem;font-weight:600}
+    .paw-panel .stats{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;font-size:.95rem;color:var(--sub);margin-top:8px}
+    .paw-panel .stats span strong{font-size:1.05rem;font-weight:800;color:var(--ink);margin-left:4px}
+    .paw-panel .admin-box{margin-top:16px;padding:14px;border-radius:12px;background:#f9f9ff;
+      border:1px solid #d0d7ff;font-weight:700;color:#1E40AF;font-size:1rem}
     .action-buttons{display:flex;gap:10px;margin-top:18px}
     .btn-kakao{flex:1;background:#FEE500;color:#111;padding:14px 18px;
       border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
@@ -40,14 +52,12 @@
     .btn-share{flex:1;background:#6b7280;color:#fff;padding:14px 18px;
       border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
     .btn-share:hover{background:#555}
-    @media(max-width:600px){
-      .action-buttons{flex-direction:column}
-      .btn-kakao,.btn-share{width:100%}
-    }
-    .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
-                  box-shadow:0 4px 10px rgba(0,0,0,0.05)}
-    .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
-    .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
+    @media(max-width:600px){.action-buttons{flex-direction:column}}
+
+    /* 타이틀 */
+    .paw-head{background:#fff;border:1px solid var(--line);border-radius:14px;padding:18px;margin-bottom:16px}
+    .paw-head .big-title{font-size:2.1rem;font-weight:900;color:var(--ink);margin:0}
+    @media(max-width:600px){.paw-head .big-title{font-size:1.7rem}}
 
     /* CTA Dock */
     .cta-dock{position:fixed; right:20px; bottom:20px; display:flex; flex-direction:column; gap:10px; z-index:50;}
@@ -56,14 +66,6 @@
     .btn-kakao-dock{background:#FEE500;color:#111;}
     .btn-insta{background:#E4405F;color:#fff;}
     .btn-share-dock{background:#6b7280;color:#fff;}
-
-    /* ===== 추가 스타일: GoFundMe 감각 ===== */
-    .paw-head{background:#fff;border:1px solid var(--line);border-radius:14px;padding:18px;margin-bottom:16px}
-    .paw-head .big-title{
-      font-size:2.1rem;font-weight:900;color:var(--ink);line-height:1.25;margin:0;
-    }
-    @media(max-width:600px){.paw-head .big-title{font-size:1.7rem}}
-    .paw-head .subline{margin-top:8px;color:var(--sub)}
   </style>
 </head>
 <body>
@@ -81,7 +83,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- ===== 원본 모듈 연동 로직 (그대로 유지) ===== -->
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { getProjectById } from './js/api.js';
@@ -119,62 +120,71 @@
             <h1 class="big-title">PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h1>
           </section>
 
-          <section class="hero-card">
-            <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                ${imgs.map((url,i)=>`
-                  <div class="carousel-item ${i===0?'active':''}">
-                    <img src="${url}" class="d-block w-100" style="height:340px;object-fit:cover" alt="img${i}">
-                    <div class="overlay">
-                      <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
-                      ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
-                    </div>
-                  </div>`).join('')}
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselProject" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-              </button>
-            </div>
-            <div class="thumb-strip">
-              ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
-            </div>
-
-            <div class="hero-body">
-              <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
-              <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
-              <div class="stats">
-                <span>목표 <strong>${fmt(goal)}</strong>원</span>
-                <span>현재 <strong>${fmt(current)}</strong>원</span>
-                <span>구조자 <strong>${p.rescuerName??'익명'}</strong></span>
+          <section class="paw-grid">
+            <!-- 좌측 -->
+            <div>
+              <div class="hero-card">
+                <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    ${imgs.map((url,i)=>`
+                      <div class="carousel-item ${i===0?'active':''}">
+                        <img src="${url}" class="d-block w-100" style="height:340px;object-fit:cover" alt="img${i}">
+                        <div class="overlay">
+                          <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
+                          ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
+                        </div>
+                      </div>`).join('')}
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselProject" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                  </button>
+                </div>
+                <div class="thumb-strip">
+                  ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
+                </div>
               </div>
 
-              ${p.summary?`<div class="section-card" style="margin-top:16px"><p>${p.summary}</p></div>`:''}
-              ${p.adminMessage?`<div class="section-card" style="margin-top:12px;background:#f9f9ff;border:1px solid #d0d7ff">
-                📌 관리자 한마디: ${p.adminMessage}</div>`:''}
+              ${p.summary?`<div class="section-card"><p>${p.summary}</p></div>`:''}
+
+              <section class="section-card">
+                <h2>스토리</h2>
+                <p>${formatDescription(p.description)}</p>
+              </section>
             </div>
-          </section>
 
-          <section class="section-card">
-            <h2>스토리</h2>
-            <p>${formatDescription(p.description)}</p>
-          </section>
+            <!-- 우측 -->
+            <div>
+              <div class="paw-panel">
+                <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
+                <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
+                <div class="stats">
+                  <span>목표 <strong>${fmt(goal)}</strong>원</span>
+                  <span>현재 <strong>${fmt(current)}</strong>원</span>
+                  <span>구조자 <strong>${p.rescuerName??'익명'}</strong></span>
+                </div>
 
-          <div class="action-buttons">
-            ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원 참여(단톡방)</a>`:''}
-            <button class="btn-share" id="shareCopy">🔗 공유하기</button>
-          </div>
+                ${p.adminMessage?`<div class="admin-box">📌 ${p.adminMessage}</div>`:''}
 
-          <section class="section-card">
-            <h2>Beta 안내</h2>
-            <p style="line-height:1.6">
-              ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
-              후원은 카카오톡 단톡방을 통해 이루어지며, 관리자가 매일 수동으로 모금액/참여자 수를 업데이트합니다.<br/>
-              정식 서비스에서는 PG 결제를 통한 자동화된 투명 시스템이 제공될 예정입니다.
-            </p>
+                <div class="action-buttons">
+                  ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원 참여(단톡방)</a>`:''}
+                  <button class="btn-share" id="shareCopy">🔗 공유하기</button>
+                </div>
+
+                <div class="section-card" style="margin-top:18px">
+                  <h2>Beta 안내</h2>
+                  <p style="line-height:1.6">
+                    ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
+                    후원은 카카오톡 단톡방을 통해 이루어지며, 관리자가 매일 수동으로 모금액/참여자 수를 업데이트합니다.<br/>
+                    정식 서비스에서는 PG 결제를 통한 자동화된 투명 시스템이 제공될 예정입니다.
+                  </p>
+                </div>
+              </div>
+            </div>
           </section>`;
+
         document.getElementById("shareCopy")?.addEventListener("click",()=>{navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다."));});
         const carouselEl=document.querySelector('#carouselProject');
         const carousel=new bootstrap.Carousel(carouselEl);
