--- a/project.html
+++ b/project.html
@@ -14,58 +14,35 @@
       font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
     .wrap{max-width:1100px;margin:0 auto;padding:20px 16px}
 
-    /* 공통 카드 */
-    .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
-                  box-shadow:0 4px 10px rgba(0,0,0,0.05)}
-    .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
-    .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
+    .paw-grid{display:grid;gap:20px}
+    @media(min-width:992px){.paw-grid{grid-template-columns:1.1fr .9fr}}
 
-    /* Hero */
-    .hero-card{background:#fff;border-radius:20px;overflow:hidden;
-               box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
-    .overlay{position:absolute;bottom:0;left:0;right:0;
-      background:linear-gradient(to top,rgba(0,0,0,.6),rgba(0,0,0,0));
-      color:#fff;padding:20px}
+    .paw-head{background:#fff;border:1px solid var(--line);border-radius:14px;padding:18px;margin-bottom:16px}
+    .paw-head .big-title{font-size:2.2rem;font-weight:900;color:var(--ink);margin:0}
+    .paw-head .subline{margin-top:8px;color:var(--sub)}
+
+    .hero-card{background:#fff;border-radius:16px;overflow:hidden;box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
+    .overlay{position:absolute;bottom:0;left:0;right:0;background:linear-gradient(to top,rgba(0,0,0,.6),rgba(0,0,0,0));color:#fff;padding:20px}
     .overlay .badge{background:var(--accent);padding:6px 12px;border-radius:8px;font-weight:700}
     .overlay .key-message{margin-top:6px;color:#FFD166;font-weight:700}
     .thumb-strip{display:flex;gap:8px;overflow-x:auto;padding:10px;background:#fafafa}
-    .thumb-strip img{height:70px;width:70px;object-fit:cover;border-radius:8px;cursor:pointer;
-      border:2px solid transparent;flex-shrink:0}
+    .thumb-strip img{height:70px;width:70px;object-fit:cover;border-radius:8px;cursor:pointer;border:2px solid transparent;flex-shrink:0}
     .thumb-strip img.active{border-color:var(--accent)}
 
-    /* 우측 패널 */
-    .paw-grid{display:grid;gap:20px}
-    @media(min-width:992px){.paw-grid{grid-template-columns:1.1fr .9fr}}
     .paw-panel{background:#fff;border:1px solid var(--line);border-radius:14px;padding:20px}
     .paw-panel .hearts{font-size:1.1rem;font-weight:700;color:var(--accent);margin-bottom:12px}
     .paw-panel .progress{background:#e5e7eb;height:16px;border-radius:12px;overflow:hidden;margin:14px 0}
-    .paw-panel .progress .bar{height:100%;background:var(--accent);color:#fff;
-      text-align:center;font-size:.8rem;font-weight:600}
+    .paw-panel .progress .bar{height:100%;background:var(--accent);color:#fff;text-align:center;font-size:.8rem;font-weight:600}
     .paw-panel .stats{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;font-size:.95rem;color:var(--sub);margin-top:8px}
     .paw-panel .stats span strong{font-size:1.05rem;font-weight:800;color:var(--ink);margin-left:4px}
-    .paw-panel .admin-box{margin-top:16px;padding:14px;border-radius:12px;background:#f9f9ff;
-      border:1px solid #d0d7ff;font-weight:700;color:#1E40AF;font-size:1rem}
+    .paw-panel .admin-box{margin-top:16px;padding:14px;border-radius:12px;background:#f9f9ff;border:1px solid #d0d7ff;font-weight:700;color:#1E40AF;font-size:1rem}
     .action-buttons{display:flex;gap:10px;margin-top:18px}
-    .btn-kakao{flex:1;background:#FEE500;color:#111;padding:14px 18px;
-      border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
-    .btn-kakao:hover{background:#e5d200}
-    .btn-share{flex:1;background:#6b7280;color:#fff;padding:14px 18px;
-      border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
-    .btn-share:hover{background:#555}
-    @media(max-width:600px){.action-buttons{flex-direction:column}}
+    .btn-kakao{flex:1;background:#FEE500;color:#111;padding:14px 18px;border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
+    .btn-share{flex:1;background:#6b7280;color:#fff;padding:14px 18px;border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
 
-    /* 타이틀 */
-    .paw-head{background:#fff;border:1px solid var(--line);border-radius:14px;padding:18px;margin-bottom:16px}
-    .paw-head .big-title{font-size:2.1rem;font-weight:900;color:var(--ink);margin:0}
-    @media(max-width:600px){.paw-head .big-title{font-size:1.7rem}}
-
-    /* CTA Dock */
-    .cta-dock{position:fixed; right:20px; bottom:20px; display:flex; flex-direction:column; gap:10px; z-index:50;}
-    .cta-dock a{display:inline-block; padding:10px 14px; border-radius:10px; font-weight:700; font-size:.9rem;
-      text-decoration:none; box-shadow:0 3px 8px rgba(0,0,0,0.12);}
-    .btn-kakao-dock{background:#FEE500;color:#111;}
-    .btn-insta{background:#E4405F;color:#fff;}
-    .btn-share-dock{background:#6b7280;color:#fff;}
+    .section-card{background:#fff;border-radius:16px;padding:20px;margin-top:20px;box-shadow:0 4px 10px rgba(0,0,0,0.05)}
+    .section-card h2{font-size:1.2rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
+    .receipt-links a{display:block;margin:6px 0;color:var(--accent);font-weight:700;text-decoration:none}
   </style>
 </head>
 <body>
@@ -77,9 +54,8 @@
 
   <!-- CTA Dock -->
   <div class="cta-dock">
-    <a href="https://open.kakao.com/o/go3sJ0Kh" class="btn-kakao-dock" target="_blank">💬 단톡방</a>
-    <a href="https://www.instagram.com/projectpaw.kr/" class="btn-insta" target="_blank">📷 인스타그램</a>
-    <a href="#" class="btn-share-dock">🔗 링크 복사</a>
+    <a href="https://open.kakao.com/o/go3sJ0Kh" class="btn-kakao" target="_blank">💬 단톡방</a>
+    <a href="https://www.instagram.com/projectpaw.kr/" class="btn-share" target="_blank">📷 인스타그램</a>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -93,16 +69,24 @@
     const $detail=document.getElementById('project-detail');
     const fmt=n=>Number(n||0).toLocaleString('ko-KR');
 
-    function candidatesOf(p){const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
+    function candidatesOf(p){
+      const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
       ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image'].forEach(k=>push(p[k]));
-      ['galleryUrls','images','photos','files','receiptUrls'].forEach(k=>{
+      ['galleryUrls','images','photos'].forEach(k=>{
         const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{if(typeof it==='string') push(it);else if(it&&(it.url||it.path)) push(it.url||it.path);});
-      });return out;}
+      });return out;
+    }
     async function toHttpUrl(raw){if(!raw) return null;let v=String(raw).trim();if(/^(https?:|data:|blob:)/i.test(v)) return v;
       if(v.startsWith('/')) v=v.slice(1);try{return await getDownloadURL(ref(storage,v));}catch{return null;}}
-    async function galleryHttpUrls(p){const cands=candidatesOf(p);const urls=await Promise.all(cands.map(toHttpUrl));
+    async function galleryHttpUrls(p){
+      const cands=candidatesOf(p);const urls=await Promise.all(cands.map(toHttpUrl));
       const uniq=[],seen=new Set();for(const u of urls){if(u&&!seen.has(u)){seen.add(u);uniq.push(u);} }
-      return uniq.length?uniq:['img/placeholder.svg'];}
+      return uniq.length?uniq:['img/placeholder.svg'];
+    }
+    async function receiptHttpUrls(p){
+      const arr=p.receiptUrls||[];if(!Array.isArray(arr))return[];
+      const urls=await Promise.all(arr.map(toHttpUrl));return urls.filter(Boolean);
+    }
     function getId(){return new URLSearchParams(location.search).get("id");}
     function formatDescription(text){if(!text) return '';return text.replace(/\n/g,'<br/>');}
 
@@ -111,6 +95,7 @@
       try{
         const p=await getProjectById(id); if(!p){$detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>';return;}
         const imgs=await galleryHttpUrls(p);
+        const receipts=await receiptHttpUrls(p);
         const goal=Number(p.goalAmount||0);
         const current=Number(p.currentAmount||0);
         const rate=goal?Math.floor(current/goal*100):0;
@@ -118,6 +103,7 @@
         $detail.innerHTML=`
           <section class="paw-head">
             <h1 class="big-title">PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h1>
+            ${p.summary?`<div class="subline">${p.summary}</div>`:''}
           </section>
 
           <section class="paw-grid">
@@ -128,31 +114,31 @@
                   <div class="carousel-inner">
                     ${imgs.map((url,i)=>`
                       <div class="carousel-item ${i===0?'active':''}">
-                        <img src="${url}" class="d-block w-100" style="height:340px;object-fit:cover" alt="img${i}">
+                        <img src="${url}" class="d-block w-100" style="height:260px;object-fit:cover" alt="img${i}">
                         <div class="overlay">
                           <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
                           ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
                         </div>
                       </div>`).join('')}
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselProject" data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                  </button>
                 </div>
                 <div class="thumb-strip">
                   ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
                 </div>
               </div>
 
-              ${p.summary?`<div class="section-card"><p>${p.summary}</p></div>`:''}
-
               <section class="section-card">
                 <h2>스토리</h2>
                 <p>${formatDescription(p.description)}</p>
               </section>
+
+              ${receipts.length?`
+              <section class="section-card">
+                <h2>영수증</h2>
+                <div class="receipt-links">
+                  ${receipts.map((url,i)=>`<a href="${url}" target="_blank">📑 영수증 ${i+1} 보기</a>`).join('')}
+                </div>
+              </section>`:''}
             </div>
 
             <!-- 우측 -->
@@ -165,14 +151,11 @@
                   <span>현재 <strong>${fmt(current)}</strong>원</span>
                   <span>구조자 <strong>${p.rescuerName??'익명'}</strong></span>
                 </div>
-
                 ${p.adminMessage?`<div class="admin-box">📌 ${p.adminMessage}</div>`:''}
-
                 <div class="action-buttons">
                   ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원 참여(단톡방)</a>`:''}
                   <button class="btn-share" id="shareCopy">🔗 공유하기</button>
                 </div>
-
                 <div class="section-card" style="margin-top:18px">
                   <h2>Beta 안내</h2>
                   <p style="line-height:1.6">
@@ -195,7 +178,6 @@
       }catch(e){$detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';}
     }
     render();
-    document.querySelector(".btn-share-dock")?.addEventListener("click",()=>{navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다."));});
   </script>
 </body>
 </html>
