--- a/admin.html
+++ b/admin.html
@@ -17,14 +17,24 @@ button.approve{background:#16a34a;color:#fff;border:none}
 button.delete{background:#dc2626;color:#fff;border:none}
 button.edit{background:#2563eb;color:#fff;border:none}
 .error{color:#dc2626;font-size:.9rem;margin-top:10px;text-align:center}
-form.editor{margin-top:30px;display:grid;gap:12px;max-width:500px}
-form.editor label{font-weight:700}
-form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-radius:8px}
 @media(max-width:600px){
   table{font-size:.8rem}
   .actions{flex-direction:column}
   button{width:100%}
 }
+
+/* 모달 */
+.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.5);
+  align-items:center;justify-content:center;z-index:9999;}
+.modal .box{background:#fff;border-radius:10px;max-width:700px;width:95%;max-height:90vh;
+  overflow:auto;padding:20px;}
+.modal h2{margin-top:0}
+.modal form{display:grid;gap:12px}
+.modal label{font-weight:700}
+.modal input,.modal textarea{padding:8px;border:1px solid #ddd;border-radius:8px}
+.modal textarea{min-height:100px;resize:vertical}
+.modal .btns{display:flex;gap:10px;justify-content:flex-end;margin-top:10px}
+.modal button{font-weight:700}
 </style>
 </head>
 <body>
@@ -48,56 +58,56 @@ form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-
             <th>구조자</th>
             <th>요약</th>
             <th>연락처</th>
+            <th>관리자 한마디</th>
             <th>상태</th>
             <th>액션</th>
           </tr>
         </thead>
         <tbody id="projects-body">
-          <tr><td colspan="7" class="muted">불러오는 중...</td></tr>
+          <tr><td colspan="8" class="muted">불러오는 중...</td></tr>
         </tbody>
       </table>
-
-      <!-- 프로젝트 편집 섹션 -->
-      <section id="editorSection" style="display:none">
-        <h2>프로젝트 수치/링크 업데이트</h2>
-        <form id="editorForm" class="editor">
-          <input type="hidden" id="edit-id"/>
-
-          <label>프로젝트 번호 (projectNumber)</label>
-          <input type="number" id="edit-projectNumber"/>
-
-          <label>조회수 (views)</label>
-          <input type="number" id="edit-views"/>
-
-          <label>등록일자 (createdAt)</label>
-          <input type="date" id="edit-createdAt"/>
-
-          <label>승인일자 (approvedAt)</label>
-          <input type="date" id="edit-approvedAt"/>
-
-          <label>구조자 계좌번호 (rescuerAccount)</label>
-          <input type="text" id="edit-rescuerAccount" placeholder="예: 국민은행 123-45-67890"/>
-
-          <label>모금액 (currentAmount)</label>
-          <input type="number" id="edit-currentAmount"/>
-
-          <label>참여자 수 (supporterCount)</label>
-          <input type="number" id="edit-supporterCount"/>
-
-          <label>목표 금액 (goalAmount)</label>
-          <input type="number" id="edit-goalAmount"/>
-
-          <label>한줄 메시지 (keyMessage)</label>
-          <input type="text" id="edit-keyMessage"/>
-
-          <label>카카오톡 오픈채팅 링크</label>
-          <input type="url" id="edit-kakaoChatUrl" placeholder="https://open.kakao.com/..."/>
-
-          <button type="submit">저장하기</button>
-        </form>
-      </section>
     </section>
   </main>
+
+  <!-- 프로젝트 전체 편집 모달 -->
+  <div class="modal" id="editModal">
+    <div class="box">
+      <h2>프로젝트 전체 편집</h2>
+      <form id="fullEditForm">
+        <input type="hidden" id="pid"/>
+
+        <label>프로젝트명</label>
+        <input type="text" id="edit-name"/>
+
+        <label>구조자 이름</label>
+        <input type="text" id="edit-rescuerName"/>
+
+        <label>요약</label>
+        <input type="text" id="edit-summary"/>
+
+        <label>스토리 설명</label>
+        <textarea id="edit-description"></textarea>
+
+        <label>대표 이미지 URL</label>
+        <input type="url" id="edit-representativeImageUrl"/>
+
+        <label>추가 이미지(,로 구분)</label>
+        <textarea id="edit-galleryUrls"></textarea>
+
+        <label>영수증 이미지(,로 구분)</label>
+        <textarea id="edit-receiptUrls"></textarea>
+
+        <label>관리자 한마디</label>
+        <textarea id="edit-adminMessage"></textarea>
+
+        <div class="btns">
+          <button type="button" id="closeModal" style="background:#ccc;color:#111;">닫기</button>
+          <button type="submit" style="background:#2563eb;color:#fff;">저장하기</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
   <script type="module">
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
@@ -112,8 +122,10 @@ form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-
     const errorDiv = document.getElementById("error");
     const adminSection = document.getElementById("adminSection");
     const $body = document.getElementById("projects-body");
-    const editorSection = document.getElementById("editorSection");
-    const editorForm = document.getElementById("editorForm");
+
+    const modal=document.getElementById("editModal");
+    const closeModalBtn=document.getElementById("closeModal");
+    const fullEditForm=document.getElementById("fullEditForm");
 
     async function isAdminUser(uid){
       const docRef = doc(db, "admins", uid);
@@ -148,7 +160,7 @@ form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-
       try{
         const list=await fetchAllProjects();
         if(!list.length){
-          $body.innerHTML='<tr><td colspan="7" class="muted">아직 등록된 프로젝트가 없습니다.</td></tr>';
+          $body.innerHTML='<tr><td colspan="8" class="muted">아직 등록된 프로젝트가 없습니다.</td></tr>';
           return;
         }
         $body.innerHTML=list.map(p=>`
@@ -158,6 +170,7 @@ form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-
             <td>${p.rescuerName??'-'}</td>
             <td>${p.summary??''}</td>
             <td>${p.privateContact??''}</td>
+            <td>${p.adminMessage??''}</td>
             <td>${fmtStatus(p)}</td>
             <td class="actions">
               ${!p.adminApproved?`<button class="approve" data-id="${p.id}">승인</button>`:''}
@@ -166,7 +179,7 @@ form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-
             </td>
           </tr>`).join('');
       }catch(e){
-        $body.innerHTML='<tr><td colspan="7" class="muted">프로젝트를 불러오지 못했습니다.</td></tr>';
+        $body.innerHTML='<tr><td colspan="8" class="muted">프로젝트를 불러오지 못했습니다.</td></tr>';
       }
     }
 
@@ -190,48 +203,40 @@ form.editor input,form.editor textarea{padding:8px;border:1px solid #ddd;border-
         const all=await fetchAllProjects();
         const p=all.find(x=>x.id===id);
         if(!p)return;
-        document.getElementById("edit-id").value=id;
-        document.getElementById("edit-projectNumber").value=p.projectNumber ?? "";
-        document.getElementById("edit-views").value=p.views ?? 0;
-        document.getElementById("edit-createdAt").value=p.createdAt ? String(p.createdAt).split("T")[0] : "";
-        document.getElementById("edit-approvedAt").value=p.approvedAt ? String(p.approvedAt).split("T")[0] : "";
-        document.getElementById("edit-rescuerAccount").value=p.rescuerAccount ?? "";
-        document.getElementById("edit-currentAmount").value=p.currentAmount||0;
-        document.getElementById("edit-supporterCount").value=p.supporterCount||0;
-        document.getElementById("edit-goalAmount").value=p.goalAmount||0;
-        document.getElementById("edit-keyMessage").value=p.keyMessage||"";
-        document.getElementById("edit-kakaoChatUrl").value=p.kakaoChatUrl||"";
-        editorSection.style.display="block";
-        editorForm.scrollIntoView({behavior:"smooth"});
+
+        document.getElementById("pid").value=id;
+        document.getElementById("edit-name").value=p.name||"";
+        document.getElementById("edit-rescuerName").value=p.rescuerName||"";
+        document.getElementById("edit-summary").value=p.summary||"";
+        document.getElementById("edit-description").value=p.description||"";
+        document.getElementById("edit-representativeImageUrl").value=p.representativeImageUrl||"";
+        document.getElementById("edit-galleryUrls").value=(p.galleryUrls||[]).join(",");
+        document.getElementById("edit-receiptUrls").value=(p.receiptUrls||[]).join(",");
+        document.getElementById("edit-adminMessage").value=p.adminMessage||"";
+
+        modal.style.display="flex"; // 모달 열기
       }
     });
 
-    editorForm.addEventListener("submit", async e=>{
+    closeModalBtn.addEventListener("click",()=>{modal.style.display="none";});
+
+    fullEditForm.addEventListener("submit",async e=>{
       e.preventDefault();
-      const id=document.getElementById("edit-id").value;
+      const id=document.getElementById("pid").value;
       if(!id)return alert("잘못된 프로젝트 ID");
 
       const data={
-        projectNumber: Number(document.getElementById("edit-projectNumber").value)||null,
-        views: Number(document.getElementById("edit-views").value)||0,
-        createdAt: document.getElementById("edit-createdAt").value||null,
-        approvedAt: document.getElementById("edit-approvedAt").value||null,
-        rescuerAccount: document.getElementById("edit-rescuerAccount").value.trim(),
-        currentAmount: Number(document.getElementById("edit-currentAmount").value)||0,
-        supporterCount: Number(document.getElementById("edit-supporterCount").value)||0,
-        goalAmount: Number(document.getElementById("edit-goalAmount").value)||0,
-        keyMessage: document.getElementById("edit-keyMessage").value.trim(),
-        kakaoChatUrl: document.getElementById("edit-kakaoChatUrl").value.trim()
+        name: document.getElementById("edit-name").value.trim(),
+        rescuerName: document.getElementById("edit-rescuerName").value.trim(),
+        summary: document.getElementById("edit-summary").value.trim(),
+        description: document.getElementById("edit-description").value.trim(),
+        representativeImageUrl: document.getElementById("edit-representativeImageUrl").value.trim(),
+        galleryUrls: document.getElementById("edit-galleryUrls").value.split(",").map(s=>s.trim()).filter(Boolean),
+        receiptUrls: document.getElementById("edit-receiptUrls").value.split(",").map(s=>s.trim()).filter(Boolean),
+        adminMessage: document.getElementById("edit-adminMessage").value.trim()
       };
 
       try{
         await updateDoc(doc(db,"projects",id),data);
         alert("프로젝트가 업데이트되었습니다.");
-        render();
-      }catch(err){
-        alert("업데이트 실패: "+err.message);
-      }
-    });
-  </script>
-</body>
-</html>
+        modal.style.display="none";
